updated store views

--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -9,6 +9,7 @@
     <link href="{% static 'users/styles.css' %}" rel="stylesheet">
 </head>
 <body>
+    <nav></nav>
     {% block body %}
     {% endblock%}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-LZ+xne7GGPqfY+FaH5T+/+wFfq3bn8b7EfNQ06el0q1M9RMiyWDq5gS6fu4Ql1p6" crossorigin="anonymous"></script>
